[package]
name = "async-error-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube = { version = "0.86.0", features = ["derive", "runtime"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
